# development

./: Automation Checklist Infoblox and ServiceNow.numbers  REST API basics- CRUD, test & variable.postman_collection.json  mortgage-interest.cal.py  pyproject.toml  servicenow.py
.github/ISSUE_TEMPLATE/: ptoject-smooth-ride-intake-form.md
.github/workflows/: automation_request_handler.yml
azure/: github-connector.py  python.code-workspace  token-test.py
azure-dev/: azure-vm-VT-x.py  azure-vm-nonVT-x.py  copilot.py
infoblox/: infoblox-auth.py  infoblox-query.py  infoblox.py
myenv/: venv-setup.md
servicenow/: README.md  pyproject.toml  servicenow.py
servicenow/servicenow/: add_sys_user.py  config.yaml  incident-lookup-endpt.py  main.py  servicenow-plugin.py  servicenow.py  servicenow_auth.py
