[tool.poetry]
name = "servicenow"
version = "0.1.0"
description = ""
authors = ["Irving Starks <ncsu.ee2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
msal = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
